--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,39 +1,50 @@
-name: "SUBSCRIPTION!"
+name: "Simorgh!"
 
 on:
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  # Runs the workflow automatically every hour
   schedule:
     - cron: '0 */1 * * *'
-    
+
+# Concurrency ensures that only one instance of this workflow runs at a time.
+# If a new run is triggered, the previous one will be allowed to finish.
 concurrency:
-  group: "pages"
+  group: ${{ github.workflow }}
   cancel-in-progress: false
 
 jobs:
   subscription:
     runs-on: ubuntu-latest
     steps:
+      # Step 1: Check out the repository code
       - name: Checkout Code
-        uses: actions/checkout@v2
-      
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
+        uses: actions/checkout@v4
+
+      # Step 2: Set up Python environment
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
-          php-version: '8.4'
-          
-      - name: Execute PHP script
+          python-version: '3.11' # You can use other versions like '3.10' or '3.12'
+          cache: 'pip' # Caches dependencies for faster runs
+
+      # Step 3: Execute the Python script to generate subscription files
+      # Make sure your Python script is named 'main.py' or update the filename below.
+      - name: Execute Python script
+        run: python main.py
+
+      # Step 4: Commit and push the generated files to the repository
+      - name: Commit and Push changes
         run: |
-          php index.php
-          
-      - name: Configure Git
-        run: |
-          git config user.name "${{ github.actor }}"
-          git config user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
-          git config credential.helper store
-          
-      - name: Commit changes
-        run: |
-          git add -A .
-          git commit -m "🐈 Last Run - $(TZ='Asia/Tehran' date '+%Y-%m-%d %H:%M:%S')"
-          git push
-          
+          git config user.name "Simorgh"
+          git config user.email "bot@Simorgh.local"
+          git add -A
+          # Check if there are any changes to commit
+          if git diff-index --quiet HEAD; then
+            echo "✅ No changes to commit."
+          else
+            # Commit the changes with a timestamp
+            git commit -m "🚀 Update subscriptions | $(TZ='Asia/Tehran' date '+%Y-%m-%d %H:%M:%S')"
+            git push
+            echo "✅ Changes committed and pushed successfully."
+          fi
